# Python-Aprendizado

./: pyproject.toml  requirements.txt
Aulas/: aula19a.py  aula20a.py  aula21a.py  aula21b.py  aula23a.py
Desafios/: desafio092.py  desafio093.py  desafio094.py  desafio095.py  desafio096.py  desafio097.py  desafio098.py  desafio099.py  desafio100.py  desafio101.py  desafio102.py  desafio103.py  desafio104.py  desafio105.py
Desafios/desafio113/: libs.py  main.py
Desafios/desafio114/: main.py
Desafios/desafio115/: cursoemvideo.txt  main.py
Desafios/desafio115/menu/: __init__.py
Desafios/desafio115/menu/uteis/: __init__.py
exModulos/: main.py
exModulos/utilidadesCeV/dado/: __init__.py
exModulos/utilidadesCeV/moeda/: __init__.py
