[tool.poetry]
name = "python-aprendizado"
version = "0.1.0"
description = ""
authors = ["Vinicius Barbosa de Aguiar <vb9763662@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
